auvia.c: round_blocksize() が(ほぼ)512を返していて6ch時に失敗していたのを修正。 PR kern/55017